<resources>
    <string name="app_name">Currency Converter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="submit">Submit</string>
    <string name="resultSampleText"> </string>
    <string name="fromSpinnerContentDesc">Source Country</string>
    <string name="toSpinnerContentDesc">Destination Country</string>
    <string name="fromAutoCompleteTextView">Source Country</string>
    <string name="toAutoCompleteTextView">Destination Country</string>
</resources>