<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:paddingTop="270dp"
    android:background="@drawable/back"
    >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="50dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/from"
                android:layout_marginEnd="20dp"
                />

            <Spinner
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/fromSpinner"
                android:background="#E3A4A4"
                android:contentDescription="@string/fromSpinnerContentDesc"
                android:visibility="gone"
                />

            <AutoCompleteTextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/fromTextView"
                android:textSize="20sp"
                android:hint="@string/fromSpinnerContentDesc"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="50dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:text="@string/to"
                />

            <AutoCompleteTextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/toTextView"
                android:layout_marginStart="60dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:hint="@string/toSpinnerContentDesc"/>

            <Spinner
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/toSpinner"
                android:background="#E3A4A4"
                android:layout_marginStart="60dp"
                android:contentDescription="@string/toSpinnerContentDesc"
                android:visibility="gone"
                />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitBtn"
            android:text="@string/submit"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="140dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:id="@+id/resultTextView"
            android:text="@string/resultSampleText"
            android:layout_marginStart="90dp"
            />


</LinearLayout>